--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <a href="/auth/login">Login</a>
-    <a href="/auth/register">Registrerung</a>
+    <a href="/auth/register">Registrierung</a>
     <h3>Status</h3>
     <%if (user) {%>
       <p>Angemeldet</p>
