--- a/express/views/register.ejs
+++ b/express/views/register.ejs
@@ -33,7 +33,8 @@
 
                 <form action="/auth/register" method="post">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="username" placeholder="Benutzername">
+                        <input type="text" class="form-control" id="username" name="username"
+                            placeholder="Benutzername">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -41,7 +42,8 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" name="password" placeholder="Passwort">
+                        <input type="password" class="form-control" id="password" name="password"
+                            placeholder="Passwort">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -64,7 +66,7 @@
                 </div>
                 <!-- /.col -->
                 <div class="col-4">
-                    <button type="submit" class="btn btn-primary btn-block">Senden</button>
+
                 </div>
                 <!-- /.col -->
             </div>
@@ -91,8 +93,31 @@
     <script type="text/javascript">
         const element = document.getElementById("passbase-button")
         const apiKey = "a7bb56e63b2653b4c1bde90f3d488ff7bd9daa509d1ce6d8cd8a2bb956b48ea2"
-        const onFinished = (error, authKey, additionalAttributes) => { }
-
+        const onFinished = (error, authKey, additionalAttributes) => {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            if (error) {
+                console.error(error)
+            } else {
+                if (username && password) {
+                    fetch(
+                        '/auth/register', // You have to provide a similar endpoint in your app
+                        {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({
+                                'authentication_key': authKey,
+                                'username': username,
+                                'password': password,
+                            })
+                        }
+                    )
+                    alert("Registrierung beendet. Sie können zur Login-Seite zurückkehren.")
+                }
+            }
+        }
         Passbase.renderButton(element, onFinished, apiKey)        
     </script>
 </body>
